--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="/styles.css" rel="stylesheet">
+      <link rel="icon" href="/images/favicon.png">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
       <title>John Yohan Lee - Professional Portfolio</title>
    </head>
@@ -46,7 +47,7 @@
                <div class="skill-card">
                   <i class="fas fa-brain" aria-hidden="true"></i>
                   <h3>Machine Learning</h3>
-                  <p>GenAI, Deep learning, NLP</p>
+                  <p>Gen AI, Deep Learning, NLP</p>
                </div>
                <div class="skill-card">
                   <i class="fas fa-server" aria-hidden="true"></i>
