--- a/wkls/index.html
+++ b/wkls/index.html
@@ -97,10 +97,14 @@
     <footer id="footer">
         <div class="container">
             <ul class="social">
-                <li><a href="#" aria-label="GitHub"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-                <li><a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
-                <li><a href="#" aria-label="Website"><i class="fa fa-globe" aria-hidden="true"></i></a></li>
-                <li><a href="mailto:example@example.com" aria-label="Email"><i class="fa fa-envelope"
+                <li><a href="https://github.com/lyoh001" aria-label="GitHub"><i class="fab fa-github"
+                            aria-hidden="true"></i></a></li>
+                <li><a href="https://linkedin.com/in/lyoh001" aria-label="LinkedIn"><i class="fab fa-linkedin"
+                            aria-hidden="true"></i></a></li>
+                <li><a href="https://lyoh001.com" aria-label="Website"><i class="fa fa-globe"
+                            aria-hidden="true"></i></a>
+                </li>
+                <li><a href="mailto:lyoh001@gmail.com" aria-label="Email"><i class="fa fa-envelope"
                             aria-hidden="true"></i></a></li>
             </ul>
             <p>&copy; 2024 WKLS. All rights reserved.</p>
@@ -502,7 +506,6 @@
                     document.querySelector(this.getAttribute('href')).scrollIntoView({
                         behavior: 'smooth'
                     });
-                    // Hide the nav menu when a link is clicked
                     navMenu.classList.remove('active');
                 });
             });
