--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link href="/styles.css" rel="stylesheet">
-   <link rel="icon" href="/images/favicon.png">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
+   <link rel="stylesheet" href="/styles.css">
+   <link rel="icon" href="/images/favicon.png">
    <title>John Yohan Lee - Professional Portfolio</title>
 </head>
 
