--- a/wkls/index.html
+++ b/wkls/index.html
@@ -110,6 +110,9 @@
             <p>&copy; 2024 WKLS. All rights reserved.</p>
         </div>
     </footer>
+    <div id="loadingSpinner" class="hidden">
+        <div class="spinner"></div>
+    </div>
     <script>
         const skillOptions = {
             communication: {
@@ -393,6 +396,9 @@
                 behaviour: behaviour.value
             };
 
+            // Show the loading spinner
+            document.getElementById('loadingSpinner').classList.remove('hidden');
+
             fetch('/api/mlwklsbrush', {
                 method: 'POST',
                 headers: {
@@ -413,8 +419,13 @@
                 })
                 .catch(error => {
                     console.error('Error making API call:', error);
+                })
+                .finally(() => {
+                    // Hide the loading spinner
+                    document.getElementById('loadingSpinner').classList.add('hidden');
                 });
         });
+
 
         document.getElementById('generateReportBtn').addEventListener('click', function (event) {
             const studentName = document.getElementById('studentName');
@@ -444,6 +455,10 @@
                 behaviour: behaviour.value,
                 overallComment: overallComment.value
             };
+
+            // Show the loading spinner
+            document.getElementById('loadingSpinner').classList.remove('hidden');
+
             fetch('/api/mlwklsgenerate', {
                 method: 'POST',
                 headers: {
@@ -470,8 +485,13 @@
                 })
                 .catch(error => {
                     console.error('Error generating report:', error);
+                })
+                .finally(() => {
+                    // Hide the loading spinner
+                    document.getElementById('loadingSpinner').classList.add('hidden');
                 });
         });
+
 
 
         const maxCharacters = 1250;
