--- a/wkls/index.html
+++ b/wkls/index.html
@@ -21,9 +21,10 @@
                 <i class="fas fa-bars"></i>
             </button>
             <ul class="nav-menu">
-                <li><a href="#hero">Home</a></li>
+                <li><a href="#hero">Name</a></li>
                 <li><a href="#form-section">Metrics</a></li>
-                <li><a href="#skills-section">Skills</a></li>
+                <li><a href="#communicationCards">Communication</a></li>
+                <li><a href="#understandingCards">Understanding</a></li>
                 <li><a href="#comment-section">Comment</a></li>
             </ul>
         </nav>
@@ -110,8 +111,11 @@
             <p>&copy; 2024 WKLS. All rights reserved.</p>
         </div>
     </footer>
-    <div id="loadingSpinner" class="hidden">
-        <div class="spinner"></div>
+    <div id="loadingSpinner"  class="hidden">
+        <div class="spinner">
+            <div class="inner-ring"></div>
+            <div class="outer-ring"></div>
+        </div>
     </div>
     <script>
         const loadingSpinner = document.getElementById('loadingSpinner');
