--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
    <link rel="stylesheet" href="/styles.css">
    <link rel="icon" href="/images/favicon.png">
-   <title>Professional Portfolio</title>
+   <title>Portfolio</title>
 </head>
 
 <body>
