--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
    <link rel="stylesheet" href="/styles.css">
    <link rel="icon" href="/images/favicon.png">
-   <title>Portfolio</title>
+   <title>John Yohan Lee's Portfolio</title>
 </head>
 
 <body>
@@ -39,18 +39,18 @@
          </div>
          <div class="hero-content container">
             <h2>Turning Vision into Innovation:</h2>
-            <p>Expert in Machine Learning & DevOps</p>
+            <p>Expert in ML & DevOps</p>
             <p>Driving Efficiency with Advanced Technologies</p>
             <a href="#portfolio" class="cta-button">View My Work</a>
          </div>
       </section>
-      <section id="skills" class="container">
+      <section id="skills">
          <h2>Skills & Expertise</h2>
          <div class="skills-grid">
             <div class="skill-card">
                <i class="fas fa-brain" aria-hidden="true"></i>
                <h3>Machine Learning</h3>
-               <p>Gen AI, Deep Learning, NLP</p>
+               <p>GenAI, Deep Learning, NLP</p>
             </div>
             <div class="skill-card">
                <i class="fas fa-server" aria-hidden="true"></i>
@@ -80,11 +80,12 @@
                   Augmentation, and AI Agent Integration
                </h3>
                <p>
-                  Leading an innovative project utilizing "Llama-3 70B" to develop a
-                  specialized company knowledge base bot. The project focuses on
-                  addressing parametric knowledge limitations, fine-tuning with
-                  proprietary data, enabling semantic retrieval, and integrating an AI
-                  agent for web and data access.
+                  Led an innovative project to create a bespoke knowledge management bot using
+                  "Llama-3 70B". Addressed parametric knowledge restrictions by fine-tuning.
+                  Incorporated Retrieval Augmented Generation and integrated an AI agent that could trigger existing
+                  automation workflows through natural language and access
+                  real-time data, all safeguarded by robust Guardrails. This project marked a
+                  significant advancement in AI for specialized knowledge management.
                </p>
                <div class="tech-stack">
                   <img src="https://img.shields.io/badge/python-161B22?logo=python" alt="Python" />
@@ -113,14 +114,14 @@
             <div class="portfolio-item">
                <h3>LLM: AI-Powered Online Report Generator</h3>
                <p>
-                  Pioneering an AI-driven online report generation tool designed to
-                  revolutionize the creation of student annual report cards for educators.
-                  The intuitive web interface allows for seamless generation of detailed
-                  reports through a simple selection process, powered by advanced
-                  generative AI to personalize and expedite documentation. This innovation
-                  underscores my expertise in AI, web development, and UI design,
-                  demonstrating a commitment to enhancing educational workflows and
-                  productivity with cutting-edge technology.
+                  Developed an AI-driven online report generation tool aimed at assisting the creation of student annual
+                  report cards for educators. Designed an intuitive web interface
+                  that enables seamless generation of detailed reports
+                  through a simple selection process. Leveraged
+                  advanced generative AI to personalize and expedite documentation, enhancing educational workflows and
+                  productivity. Demonstrated expertise in AI, web
+                  development, and UI design by integrating cutting-edge
+                  technology to improve educational outcomes.
                </p>
                <div class="tech-stack">
                   <img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" />
@@ -147,19 +148,16 @@
                </div>
             </div>
             <div class="portfolio-item">
-               <h3>LLM: AI Integration Showcase - Multi-Cloud AI Synergy with a Full-Stack
+               <h3>LLM: Multi-Cloud AI Playground with a Full-Stack
                   Integration
                </h3>
                <p>
-                  Pioneering the integration of Large Language Models (LLMs) within a
-                  sophisticated multi-cloud framework, this project stands at the vanguard
-                  of AI-driven innovation. It exemplifies the harmonious fusion of
-                  advanced AI with dynamic web application frameworks, redefining the
-                  benchmarks of technological synergy. The initiative has achieved a
-                  notable breakthrough by creating a scalable, high-availability AI
-                  ecosystem that operates seamlessly across diverse cloud platforms,
-                  including AWS, Azure, and local infrastructures, while also delivering a
-                  rich, multi-model AI experience and ensuring rapid user engagement with
+                  Developed an innovative, multi-cloud AI web application leveraging GPT-3.5, GPT-4, Claude-3, Cohere,
+                  LLaMA-3, Mistral, and DALL-E-3, showcased at the Cenitex Innovation Hub. Built with Azure WebApps and
+                  AWS SageMaker, the app integrates Large Language Models (LLMs) within a sophisticated multi-cloud
+                  framework. This project sets new standards for AI-driven innovation by creating a scalable,
+                  high-availability AI ecosystem that operates seamlessly across AWS, Azure, and local infrastructures.
+                  The application delivers a rich, multi-model AI experience, ensuring rapid user engagement and
                   exceptional system responsiveness.
                </p>
                <div class="tech-stack">
